--- a/memory/package.json
+++ b/memory/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": " webpack --watch",
     "build": "webpack",
-    "dev-server": "webpack serve"
+    "dev-server": "webpack serve",
+    "start": "webpack serve"
   },
   "keywords": [
     "game",
