--- a/memeGen/package.json
+++ b/memeGen/package.json
@@ -7,12 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "dev-server": "webpack serve",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "start": "webpack serve"
   },
   "author": "tayeb",
   "license": "ISC",
   "dependencies": {
-    "npm": "^8.9.0"
+    "npm": "^8.9.0",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
@@ -28,11 +32,10 @@
     "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^4.6.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "npm": "^8.9.0"
   }
 }
